--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             <div class="top">
                 <div class="allclear bgclr">AC</div>
                 <div class="theme bgclr"><img src="./theme.png"></div>
-                <div class="history bgclr"><img src="./history.png"></div>
+                <div class="history bgclr">☼</div>
                 <div class="clear bgclr">&#9003;</div>
 
                 <div class="root bgclr">&#8730;</div>
                 <div class="negative bgclr">	
-                  &#177;</div>
+                  ±</div>
                 <div class="percent bgclr">%</div>
                 <div class="divide bgclr">÷</div>
             </div>
@@ -29,11 +29,11 @@
                 <div class="num">7</div>
                 <div class="num">8</div>
                 <div class="num">9</div>
-                <div class="multiply  bgclr">x</div>
+                <div class="multiply  bgclr">×</div>
                 <div class="num">4</div>
                 <div class="num">5</div>
                 <div class="num">6</div>
-                <div class="subtract bgclr">-</div>
+                <div class="subtract bgclr">–</div>
                 <div class="num">1</div>
                 <div class="num">2</div>
                 <div class="num">3</div>
