history feature implemented

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <body>
     
     <div id="container">
+      <div class="history">=</div>
         <div class="results" >0</div>
-        
         <div class="btns">
             <div class="top">
                 <div class="allclear bgclr">AC</div>
                 <div class="theme bgclr"><img src="./theme.png"></div>
-                <div class="history bgclr">☼</div>
+                <div class="fil bgclr">☼</div>
                 <div class="clear bgclr">&#9003;</div>
 
                 <div class="root bgclr">&#8730;</div>
